# deltaq

./: README.md  cabal.project  fourmolu.yaml
.github/scripts/: cp-hpc-reports.sh
.github/workflows/: build.yml
deltaq/: DeltaQ-Class.html  DeltaQ-PiecewisePolynomial.html  DeltaQ-PiecewisePolynomialNew.html  DeltaQ.html  deltaq.haddock  doc-index.html  index.html
deltaq/src/: DeltaQ.Class.html  DeltaQ.Model.DeltaQ.html  DeltaQ.Model.Introspection.html  DeltaQ.Model.Utilities.html  DeltaQ.PWPs.html  DeltaQ.PiecewisePolynomial.html  DeltaQ.PiecewisePolynomialNew.html  DeltaQ.html
doc/: README.md  flake.nix
doc/additional-tools/: PlottingSupport.hs
doc/deltaq/: CHANGELOG.md  DeltaQ-Class.html  DeltaQ-Diagram-Internal.html  DeltaQ-Diagram.html  DeltaQ-Expr.html  DeltaQ-Methods.html  DeltaQ-PiecewisePolynomial.html  DeltaQ-Plot.html  DeltaQ.html  deltaq.haddock  doc-index.html  index.html  meta.json
doc/deltaq/src/: DeltaQ.Class.html  DeltaQ.Diagram.Internal.html  DeltaQ.Diagram.html  DeltaQ.Expr.html  DeltaQ.Methods.html  DeltaQ.Model.DeltaQ.html  DeltaQ.Model.Introspection.html  DeltaQ.Model.Utilities.html  DeltaQ.PiecewisePolynomial.html  DeltaQ.Plot.html  DeltaQ.html
doc/features/: 01 - Introduction.ipynb  02 - Visualisation approaches.ipynb
doc/iHaskell-Notebooks/: .gitignore  Untitled.ipynb
doc/iHaskell-Notebooks/CardanoPraos/: CardanoPraosTimelinessAndFinality.ipynb
doc/iHaskell-Notebooks/Features/: 01 - Introduction.ipynb  02 - Visualisation approaches.ipynb  03 - Imperfection.ipynb  03 - Mitigating Failure.ipynb  04 - Mitigating Failure.ipynb
doc/probability-polynomial/: CHANGELOG.md  Data-Function-Class.html  Numeric-Function-Piecewise.html  Numeric-Measure-Discrete.html  Numeric-Measure-Finite-Mixed.html  Numeric-Measure-Probability.html  Numeric-Polynomial-Simple.html  Numeric-Probability-Mixed.html  Numeric-Probability-Moments.html  doc-index.html  index.html  probability-polynomial.haddock
doc/probability-polynomial/src/: Data.Function.Class.html  Numeric.Function.Piecewise.html  Numeric.Measure.Discrete.html  Numeric.Measure.Finite.Mixed.html  Numeric.Measure.Probability.html  Numeric.Polynomial.Simple.html  Numeric.Probability.Mixed.html  Numeric.Probability.Moments.html
doc/reports/: artefact-A2.md  artefact-A4.md
doc/tutorial/: 01 - Quality Attenutation.ipynb
hpc/deltaq/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
hpc/deltaq/deltaq-1.0.0.0-inplace/: DeltaQ.Class.hs.html  DeltaQ.Methods.hs.html  DeltaQ.PiecewisePolynomial.hs.html
hpc/deltaq/deltaq-1.0.1.0-inplace/: DeltaQ.PiecewisePolynomial.hs.html
hpc/deltaq/deltaq-1.0.2.0-inplace/: DeltaQ.Class.hs.html  DeltaQ.Diagram.hs.html  DeltaQ.Expr.hs.html  DeltaQ.Methods.hs.html  DeltaQ.PiecewisePolynomial.hs.html
hpc/deltaq/deltaq-1.1.0.0-inplace/: DeltaQ.Class.hs.html  DeltaQ.Diagram.Internal.hs.html  DeltaQ.Expr.hs.html  DeltaQ.Methods.hs.html  DeltaQ.PiecewisePolynomial.hs.html
hpc/deltaq/html/: hpc_index_alt.html
hpc/probability-polynomial/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
hpc/probability-polynomial/html/: hpc_index_alt.html  hpc_index_fun.html
lib/deltaq/: CHANGELOG.md  deltaq.cabal
lib/deltaq-examples/: CHANGELOG.md  README.md  deltaq-examples.cabal
lib/deltaq-examples/src/DeltaQ/Example/: Plot.hs
lib/deltaq-examples/test/doctest/: Main.hs
lib/deltaq/benchmark/: Main.hs
lib/deltaq/benchmark/Benchmark/: Plot.hs
lib/deltaq/src/: DeltaQ.hs
lib/deltaq/src/DeltaQ/: Class.hs  Diagram.hs  Expr.hs  Methods.hs  PiecewisePolynomial.hs  PiecewisePolynomialNew.hs  PiecewisePolynomialOld.hs  Plot.hs  Term.hs
lib/deltaq/src/DeltaQ/Diagram/: Internal.hs
lib/deltaq/src/DeltaQ/Model/: DeltaQ.hs  Introspection.hs  Utilities.hs
lib/deltaq/test/DeltaQ/: ClassSpec.hs  DiagramSpec.hs  MethodsSpec.hs  PiecewisePolynomialNewSpec.hs  PiecewisePolynomialOldSpec.hs  PiecewisePolynomialSpec.hs
lib/dqsd-classes/: dqsd-classes.cabal
lib/dqsd-classes/src/DeltaQ/: Class.hs  (+1 more)
lib/dqsd-piecewise-poly/: dqsd-piecewise-poly.cabal
lib/dqsd-piecewise-poly/benchmark/: Main.hs
lib/dqsd-piecewise-poly/src/DeltaQ/: PWPs.hs  PiecewisePolynomial.hs
lib/dqsd-piecewise-poly/src/Numeric/Polynomial/: Simple.hs
lib/dqsd-piecewise-poly/src/PWPs/: Calculus.hs  IRVs.hs  Piecewise.hs  PolyDeltas.hs  PolyHeavisides.hs  SimplePolynomials.hs
lib/dqsd-piecewise-poly/test/DeltaQ/: PiecewisePolynomialSpec.hs
lib/probability-polynomial/: CHANGELOG.md  LICENSE  probability-polynomial.cabal
lib/probability-polynomial/benchmark/: Main.hs
lib/probability-polynomial/src/: DeltaQ.hs
lib/probability-polynomial/src/Data/Function/: Class.hs
lib/probability-polynomial/src/Numeric/Function/: Piecewise.hs
lib/probability-polynomial/src/Numeric/Measure/: Discrete.hs  Probability.hs
lib/probability-polynomial/src/Numeric/Measure/Finite/: Mixed.hs
lib/probability-polynomial/src/Numeric/Polynomial/: Simple.hs
lib/probability-polynomial/src/Numeric/Probability/: Mixed.hs  Moments.hs
lib/probability-polynomial/src/PWPs/: Calculus.hs  IRVs.hs  Piecewise.hs  PiecewiseClasses.hs  PolyDeltas.hs
lib/probability-polynomial/test/Numeric/Function/: PiecewiseSpec.hs
lib/probability-polynomial/test/Numeric/Measure/: DiscreteSpec.hs  ProbabilitySpec.hs
lib/probability-polynomial/test/Numeric/Measure/Finite/: MixedSpec.hs
lib/probability-polynomial/test/Numeric/Polynomial/: SimpleSpec.hs
lib/probability-polynomial/test/Numeric/Probability/: MixedSpec.hs
probability-polynomial/: Data-Function-Class.html  Numeric-Function-Piecewise.html  Numeric-Measure-Discrete.html  Numeric-Measure-Finite-Mixed.html  Numeric-Polynomial-Simple.html  PWPs-IRVs.html  doc-index.html  index.html  probability-polynomial.haddock
probability-polynomial/src/: Data.Function.Class.html  Numeric.Function.Piecewise.html  Numeric.Measure.Discrete.html  Numeric.Measure.Finite.Mixed.html  Numeric.Polynomial.Simple.html  PWPs.Calculus.html  PWPs.IRVs.html  PWPs.Piecewise.html  PWPs.PiecewiseClasses.html  PWPs.PolyDeltas.html  PWPs.PolyHeavisides.html
(+23 files in other folders)
