cabal-version:   3.0
name:            deltaq-examples

-- Package Versioning Policy: https://pvp.haskell.org
-- PVP summary:    +-+------- breaking API changes
--                 | | +----- non-breaking API additions
--                 | | | +--- code changes with no API change
version:         0.1.0.0
synopsis:        ∆Q Systems Development Examples
description:
  ∆Q System Development is a paradigm for developing distributed systems
  that meet performance requirements.

  This package provides examples for the `deltaq` package.

license:         BSD-3-Clause
license-file:    LICENSE
author:          Predictable Network Solutions Ltd.
maintainer:      neil.davies@pnsol.ccom

-- copyright:
build-type:      Simple
extra-source-files:
  CHANGELOG.md
  README.md
  diagrams/*.svg
extra-doc-files:
  diagrams/*.svg

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base
    , deltaq
    , Chart
    , Chart-diagrams
    , diagrams-core
    , diagrams-lib
    , diagrams-svg

  exposed-modules:
    DeltaQ.Example.Plot
