cabal-version:   3.0
name:            deltaq

-- Package Versioning Policy: https://pvp.haskell.org
-- PVP summary:    +-+------- breaking API changes
--                 | | +----- non-breaking API additions
--                 | | | +--- code changes with no API change
version:         0.3.0.1
synopsis:        ∆Q Systems Development, type classes

-- description:

license:         BSD-3-Clause
license-file:    LICENSE
author:          Neil Davies
maintainer:      neil.davies@pnsol.ccom

-- copyright:
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base
    , Chart

  exposed-modules:
    DeltaQ.Class
    DeltaQ.Model.DeltaQ
    DeltaQ.Model.Introspection
    DeltaQ.Model.Utilities
