cabal-version:   3.0
name:            deltaq

-- Package Versioning Policy: https://pvp.haskell.org
-- PVP summary:    +-+------- breaking API changes
--                 | | +----- non-breaking API additions
--                 | | | +--- code changes with no API change
version:         0.3.0.1
synopsis:        ∆Q Systems Development
description:
  ∆Q System Development is a paradigm for developing distributed systems
  that meet performance requirements.
  In this paradigm,
  the system designer starts by defining high-level outcomes,
  explores different refinements into combinations of lower-level outcomes,
  and evaluates their performance characteristics.

  This package provides data types and functions for

  * outcomes and their combinations
  * evaluating the performance characteristics of outcomes,
    specifically the probability distribution of their completion times

license:         BSD-3-Clause
license-file:    LICENSE
author:          Neil Davies
maintainer:      neil.davies@pnsol.ccom

-- copyright:
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base
    , deepseq > 1.4
    , Chart
    , probability-polynomial

  exposed-modules:
    DeltaQ
    DeltaQ.Class
    DeltaQ.PiecewisePolynomial

  other-modules:
    DeltaQ.Model.DeltaQ
    DeltaQ.Model.Introspection
    DeltaQ.Model.Utilities

test-suite test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010

  build-tool-depends: hspec-discover:hspec-discover
    
  build-depends:
    , base
    , deltaq
    , hspec ^>= 2.11.0
    , QuickCheck
  
  main-is:
    Spec.hs

  other-modules:
    DeltaQ.PiecewisePolynomialSpec
