cabal-version:   3.0
name:            dqsd-piecewise-poly

-- Package Versioning Policy: https://pvp.haskell.org
-- PVP summary:    +-+------- breaking API changes
--                 | | +----- non-breaking API additions
--                 | | | +--- code changes with no API change
version:         4.2.0.0
synopsis:        A piecewise polynomial implementation of dqsd-classes

-- description:

license:         BSD-3-Clause
license-file:    LICENSE
author:          peterwthompson
maintainer:      peter.thompson@pnsol.com

-- copyright:
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  default-language: Haskell2010
  other-extensions:
    AllowAmbiguousTypes
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MonoLocalBinds
    MultiParamTypeClasses
    ScopedTypeVariables
    TypeSynonymInstances

  build-depends:
    , base
    , dqsd-classes

  exposed-modules:
    DeltaQ.PWPs
    PWPs.IRVs

  other-modules:
    PWPs.Calculus
    PWPs.Piecewise
    PWPs.PiecewiseClasses
    PWPs.PolyDeltas
    PWPs.PolyHeavisides
    PWPs.SimplePolynomials

test-suite dqsd-piecewise-poly-test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  other-extensions:
    AllowAmbiguousTypes
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    TypeSynonymInstances

  build-depends:
    , base
    , dqsd-piecewise-poly
