cabal-version:   3.0
name:            dqsd-piecewise-poly

-- Package Versioning Policy: https://pvp.haskell.org
-- PVP summary:    +-+------- breaking API changes
--                 | | +----- non-breaking API additions
--                 | | | +--- code changes with no API change
version:         4.2.0.0
synopsis:        A piecewise polynomial implementation of dqsd-classes

-- description:

license:         BSD-3-Clause
license-file:    LICENSE
author:          peterwthompson
maintainer:      peter.thompson@pnsol.com

-- copyright:
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  default-language: Haskell2010
  other-extensions:
    AllowAmbiguousTypes
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MonoLocalBinds
    MultiParamTypeClasses
    ScopedTypeVariables
    TypeSynonymInstances

  build-depends:
    , base
    , deepseq
    , dqsd-classes

  exposed-modules:
    DeltaQ
    DeltaQ.PiecewisePolynomial
    DeltaQ.PWPs
    Numeric.Polynomial.Simple
    PWPs.IRVs

  other-modules:
    PWPs.Calculus
    PWPs.Piecewise
    PWPs.PiecewiseClasses
    PWPs.PolyDeltas
    PWPs.PolyHeavisides

test-suite test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  other-extensions:
    AllowAmbiguousTypes
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    TypeSynonymInstances

  build-tool-depends: hspec-discover:hspec-discover
    
  build-depends:
    , base
    , dqsd-classes
    , dqsd-piecewise-poly
    , hspec ^>= 2.11.0
    , QuickCheck
  
  main-is:
    Spec.hs

  other-modules:
    DeltaQ.PiecewisePolynomialSpec

benchmark dqsd-piecewise-poly-benchmark
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmark
  default-language: Haskell2010
  main-is:          Main.hs

  build-depends:
    , base
    , dqsd-piecewise-poly
    , criterion > 1.6
    , deepseq > 1.4
