cabal-version:   3.0
name:            probability-polynomial

-- Package Versioning Policy: https://pvp.haskell.org
-- PVP summary:    +-+------- breaking API changes
--                 | | +----- non-breaking API additions
--                 | | | +--- code changes with no API change
version:         4.2.0.0
synopsis:        Probability distributions via piecewise polynomials

-- description:

license:         BSD-3-Clause
license-file:    LICENSE
author:          peterwthompson
maintainer:      peter.thompson@pnsol.com

-- copyright:
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  default-language: Haskell2010
  other-extensions:
    AllowAmbiguousTypes
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MonoLocalBinds
    MultiParamTypeClasses
    ScopedTypeVariables
    TypeSynonymInstances

  build-depends:
    , base
    , containers
    , deepseq
    , exact-combinatorics > 0.2

  exposed-modules:
    Data.Function.Class
    Numeric.Function.Piecewise
    Numeric.Measure.Discrete
    Numeric.Measure.Finite.Mixed
    Numeric.Polynomial.Simple
    PWPs.IRVs

  other-modules:
    PWPs.Piecewise
    PWPs.PiecewiseClasses
    PWPs.PolyDeltas

test-suite test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  other-extensions:
    AllowAmbiguousTypes
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    TypeSynonymInstances

  build-tool-depends: hspec-discover:hspec-discover
    
  build-depends:
    , base
    , containers
    , probability-polynomial
    , hspec ^>= 2.11.0
    , QuickCheck
  
  main-is:
    Spec.hs
  
  other-modules:
    Numeric.Function.PiecewiseSpec
    Numeric.Measure.DiscreteSpec
    Numeric.Measure.Finite.MixedSpec
    Numeric.Polynomial.SimpleSpec

benchmark probability-polynomial-benchmark
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmark
  default-language: Haskell2010
  main-is:          Main.hs

  build-depends:
    , base
    , probability-polynomial
    , criterion > 1.6
    , deepseq > 1.4
