cabal-version:   3.0
name:            probability-polynomial

-- Package Versioning Policy: https://pvp.haskell.org
-- PVP summary:    +-+------- breaking API changes
--                 | | +----- non-breaking API additions
--                 | | | +--- code changes with no API change
version:         1.0.0.0
synopsis:        Probability distributions via piecewise polynomials

-- description:

license:         BSD-3-Clause
license-file:    LICENSE
author:          peterwthompson
maintainer:      peter.thompson@pnsol.com

-- copyright:
build-type:      Simple

extra-source-files:
  CHANGELOG.md
  README.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  default-language: Haskell2010

  build-depends:
    , base >= 4.14.3.0 && < 4.21
    , containers >= 0.6 && < 0.8
    , deepseq >= 1.4.4.0 && < 1.6
    , exact-combinatorics > 0.2 && < 0.3

  exposed-modules:
    Data.Function.Class
    Numeric.Function.Piecewise
    Numeric.Measure.Discrete
    Numeric.Measure.Finite.Mixed
    Numeric.Polynomial.Simple
    Numeric.Probability.Mixed

test-suite test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010

  build-tool-depends: hspec-discover:hspec-discover
    
  build-depends:
    , base
    , containers
    , probability-polynomial
    , hspec >= 2.11.0 && < 2.12
    , QuickCheck >= 2.14 && < 2.16
  
  main-is:
    Spec.hs
  
  other-modules:
    Numeric.Function.PiecewiseSpec
    Numeric.Measure.DiscreteSpec
    Numeric.Measure.Finite.MixedSpec
    Numeric.Polynomial.SimpleSpec

benchmark probability-polynomial-benchmark
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmark
  default-language: Haskell2010
  main-is:          Main.hs

  build-depends:
    , base
    , probability-polynomial
    , criterion >= 1.6 && < 1.7
    , deepseq
